# pg_lexo

./: .gitignore  Cargo.toml  Dockerfile  README.md  install.sh  pg_lexo.control  pg_order.control
.github/: copilot-instructions.md
.github/workflows/: build-extension.yml  docker-publish.yml  release.yml
sql/: pg_lexo--0.0.7--0.1.0.sql  pg_lexo--0.1.0--0.2.0.sql  pg_lexo--0.2.0--0.3.0.sql  pg_lexo--0.3.0--0.3.1.sql  pg_lexo--0.4.3--0.5.0.sql  pg_lexo--0.5.0--0.6.0.sql  pg_lexo--0.5.0.sql  pg_lexo--0.6.0.sql
src/: lexorank.rs  lib.rs  lib_old.rs  operations.rs  schema.rs
