[package]
name = "pg_lexo"
version = "0.4.0"
edition = "2024"
description = "PostgreSQL extension for lexicographic ordering of fields in relationship tables"
license = "MIT"
repository = "https://github.com/Blad3Mak3r/pg_lexo"
keywords = ["postgresql", "extension", "ordering", "lexicographic"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_lexo"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
